[JBWS-4027] JDK9 support